src/components/PostBox/PostBox.module.scss
.FeedPost {
  margin-top: 50px;
  padding: 15px 25px 15px 20px;
  width: 100%;
  border-radius: 24px;
  color: var(--color-text-default);

  .PostHeader {
    display: flex;
    justify-content: space-between;

    .LeftPart {
      display: flex;

      .ProfileImageMedium {
        width: 80px;
        height: 80px;
        border-radius: 80px;
        border: 3px solid var(--color-border-light);
        background-size: cover;
        background-position: center;
        margin-top: -50px;
        margin-right: 10px;
        cursor: pointer;
      }
    }

    .RightPart {
      span {
        margin-right: 20px;
      }

      img {
        cursor: pointer;
      }
    }
  }

  .PostTags {
    margin-top: 10px;
    display: flex;
    justify-content: end;

    .PostTag {
      padding: 3px 5px;
      border-radius: 30px;
      border: 1px solid var(--color-border-light);
      font-size: 0.6em;
      margin-left: 10px;
    }
  }

  .PostContent {
    margin: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;

    .EventImage {
      width: 64px;
      height: 64px;
      border-radius: 20px;
      background-position: center;
      background-size: cover;
    }

    .EventIcon {
      width: 64px;
      height: 64px;
    }

    .PostImage {
      margin-bottom: 10px;
      max-width: 80%;
      max-height: 50vh;
      border-radius: 5px;
    }
  }

  .PostFooter {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;

    .PostActions {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 270px;
      max-width: 50%;

      .IconNumber {
        cursor: pointer;
        display: flex;
        align-items: inherit;

        img {
          height: 16px;
        }

        span {
          margin-left: 7px;
          vertical-align: text-top;
          font-size: 14px;
          height: 18px;
        }
      }
    }

    .PostShare {
      cursor: pointer;
    }
  }
}

.PostType {
  background-color: var(--color-background-main-l3);
}

.EventType {
  background-color: var(--color-background-main-l2);
}

.Comment {
  margin-top: 0;
  background: none;
  padding: 15px 35px 15px 30px;

  .PostHeader {
    .LeftPart {
      .ProfileImageMedium {
        width: 60px;
        height: 60px;
        border-radius: 60px;
        margin-top: 0;
      }
    }

    .RightPart {
      span {
        margin-right: 20px;
      }

      img {
        cursor: pointer;
      }
    }
  }

  .PostTags {
    display: none;
  }

  .PostContent {
    margin: 0;
    display: flex;

    p {
      margin: 0;
      width: 80%;
    }
  }
}

.Repost {
  background-color: var(--color-background-main-l2);
  .PostContent {
    p {
      margin: 10px;
    }
  }
}


.Popup {
  width: 100%;
  height: 100%;
  background-color: #666;
  opacity: 0.8;
  position: absolute;
  left: 0;
  z-index: 10;
}

.Container {
  width: 100%;
  height: 100vh;
  position: absolute;
  left: 0;
  overflow: hidden;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;

  .FeedPost {
    width: 95%;
    max-width: 700px;

    .Separator {
      width: 90%;
      height: 1px;
      margin: 30px auto;
      background-color: var(--color-border);
    }
  }
}

.Bytes32Parameter {
  position: relative;
  z-index: 2;
  cursor: pointer;
}

@media only screen and (max-width: 600px) {
  .FeedPost {
    padding: 15px 15px 15px 10px;
    .PostHeader {
      .LeftPart {
        .ProfileImageMedium {
          width: 50px;
          height: 50px;
          margin-top: -40px;
        }

        .UserTag {
          font-size: 0.8em;
          margin-left: -10px;
        }
      }
      .RightPart {
        span {
          font-size: 0.8em;
        }
        img {
          height: 15px;
          width: 15px;
        }
      }
    }

    .PostContent {
      font-size: 0.9em;

      .EventIcon {
        width: 50px;
        height: 50px;
      }
    }

    .PostFooter {
      .PostActions {
        .IconNumber {
          img {
            height: 13px;
            width: 13px;
          }
        }
      }
      .PostShare {
        height: 15px;
        width: 15px;
      }
    }
  }

  .Comment {
    .PostHeader {
      .LeftPart {
        .ProfileImageMedium {
          width: 45px;
          height: 45px;
          border-radius: 45px;
          border: 2px solid;
          margin-top: 0;
        }

        .UserTag {
          margin-left: 0;
        }
      }
    }
  }


  .Container {
    .FeedPost {
      .Separator {
        margin: 10px auto;
      }
    }
  }
}

@media only screen and (max-width: 350px) {
  .FeedPost {
    padding: 5px 10px;
    margin-top: 40px;
    .PostHeader {
      .LeftPart {
        .ProfileImageMedium {
          width: 40px;
          height: 40px;
          margin-top: -25px;
          border: 2px solid;
        }

        .UserTag {
          font-size: 0.7em;
          margin-left: -5px;
        }
      }
      .RightPart {
        display: flex;
        align-items: center;
        span {
          font-size: 0.6em;
          margin-right: 10px;
        }
        img {
          height: 10px;
          width: 10px;
        }
      }
    }

    .PostContent {
      font-size: 0.7em;
      margin: 0;
      .EventIcon, .EventImage {
        width: 30px;
        height: 30px;
      }
    }

    .PostFooter {
      margin: 0;
      .PostActions {
        .IconNumber {
          img {
            height: 10px;
            width: 10px;
          }

          span {
            font-size: 0.7em;
            vertical-align: baseline;
            margin-left: 4px;
          }
        }
      }
      .PostShare {
        height: 10px;
        width: 10px;
      }
    }
  }

  .Comment {
    .PostHeader {
      .LeftPart {
        .ProfileImageMedium {
          width: 30px;
          height: 30px;
          border-radius: 30px;
          border: 2px solid;
          margin-top: 0;
        }

        .UserTag {
          font-size: 0.6em;
        }
      }
    }

    .PostContent {
      font-size: 0.6em;

      p {
        margin-bottom: 4px;
      }
    }
  }

  .Repost {
    margin-top: 0;
  }
}

